fix css overflow

--- a/styles/default/style.css
+++ b/styles/default/style.css
@@ -10,6 +10,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
+  overflow: hidden;
 }
 
 #wrapper {
@@ -28,8 +29,9 @@ body {
 
 #birthday {
   display: block;
+  width: 100%;
   border-style: solid;
-    border-width: 5px;
+  border-width: 5px;
 }
 
 #fullname:after {
@@ -49,12 +51,14 @@ body {
 
 #info {
   float: left;
+  background-color: yellow;
 }
 
 #fullname {
   position: relative;
   margin: .5em;
   display: block;
+  overflow: hidden;
   /*float: left;*/
 }
 
